--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.2",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.6",
     "nodemon": "^2.0.12",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
@@ -40,6 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
-  "proxy": "http://localhost:4000"
+  "devDependencies": {}
 }
