--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start && node ./backend/proxy.js",
+    "start": "node server",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
