--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "node server",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,5 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "proxy": "http://localhost: 4000"
 }
